[project]
name = "dbms"
version = "0.1.0"
description = "Системы управления базами данных"
authors = [
    {name = "askras",email = "askrasnikov@gmail.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"


readme = "README.md"
keywords = ["DBMS", "DB", "СУБД", "БД", "database", "базы данных", "системы управления базами данных", "database management system"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "jupyterlab (>=4.4.0,<5.0.0)",
    "jupytext (>=1.17.0,<2.0.0)",
    "jupyter-tikz (>=0.5.6,<0.6.0)",
]


[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = {git = "https://github.com/askras/poetry-exec-plugin.git"} # A plugin for poetry that allows you to execute scripts defined in your pyproject.toml
poetry-plugin-export = "~1.9" # Poetry plugin to export the dependencies to various formats


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
